--- a/src/components/boardGroup/boardGroup.scss
+++ b/src/components/boardGroup/boardGroup.scss
@@ -26,11 +26,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    overflow-x: auto;
   }
 
   .collapsible-board {
-    // padding: 8px 12px;
     box-sizing: border-box;
     display: none;
   }
