--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -137,7 +137,7 @@
   }
 
   .board {
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -187,9 +187,33 @@
   }
 
   .column-group-container {
-    height: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    overflow: auto;
+  }
+
+  .column-parent-container {
+    position: relative;
+
+    &.not-at-right:after,
+    &.not-at-left:before {
+      content: '';
+      height: 100%;
+      width: 10px;
+      top: 0;
+      position: absolute;
+      z-index: 1;
+    }
+
+    &.not-at-right:after {
+      right: 0;
+      background: linear-gradient(to right, #00000000, #00000011);
+    }
+
+    &.not-at-left:before {
+      left: 0;
+      background: linear-gradient(to right, #00000011, #00000000);
+    }
   }
 }
