--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   overflow: hidden;
+  margin: 0;
 
   @media (min-device-width: 812px) {
     padding: 24px 8px 8px 8px;
@@ -101,26 +102,30 @@
   }
 
   .sider-footer {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    width: 100%;
-    min-height: 40px;
-    align-items: center;
-    font-size: 14px;
-    text-decoration: none;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 3px;
-    color: #42526e;
-    line-height: 1.22;
-
-    #learn-more {
-      margin: 6px;
-      font-weight: bold;
-      &:hover {
-        text-decoration: underline;
-        color: #6b778c;
+    display: none;
+    
+    @media (min-device-width: 812px) {
+      display: flex;
+      flex-direction: column;
+      box-sizing: border-box;
+      width: 100%;
+      min-height: 90px;
+      align-items: center;
+      font-size: 14px;
+      text-decoration: none;
+      text-align: center;
+      cursor: pointer;
+      border-radius: 3px;
+      color: #42526e;
+      line-height: 1.22;
+  
+      #learn-more {
+        margin: 6px;
+        font-weight: bold;
+        &:hover {
+          text-decoration: underline;
+          color: #6b778c;
+        }
       }
     }
   }
